add menu Button, JS and Rotate

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,11 @@
 @import "config";
+@import "menu";
 
 * {
   box-sizing: border-box;
 }
 
-bode {
+body {
   @include background;
   background: $primary-color;
   color: #fff;
